// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletGroupTitle 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="width: 100%; height: 100%; pointer-events: all;"
      viewBox="0 0 450 300"
      width="450"
    />
    <div
      style="width: 100%; height: 100%; z-index: 99; position: absolute; top: 0px; left: 0px;"
    >
      <svg
        height="300"
        style="width: 100%; height: 100%; overflow: visible;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletGroupTitle 2`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="width: 100%; height: 100%; pointer-events: all;"
      viewBox="0 0 450 300"
      width="450"
    />
    <div
      style="width: 100%; height: 100%; z-index: 99; position: absolute; top: 0px; left: 0px;"
    >
      <svg
        height="300"
        style="width: 100%; height: 100%; overflow: visible;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="width: 100%; height: 100%; pointer-events: all;"
      viewBox="0 0 450 300"
      width="450"
    >
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="225"
        y="49.150000000000006"
      >
        <tspan
          dx="0"
          dy="0"
          style="fill: var(--pf-v6-chart-bullet--label--grouptitle--Fill, #1f1f1f); font-size: 22px; text-anchor: middle; font-family: var(--pf-v6-chart-global--FontFamily, 'Red Hat Text', 'RedHatText', 'Noto Sans Arabic', 'Noto Sans Hebrew', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans Malayalam', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans Thai', Helvetica, Arial, sans-serif); letter-spacing: var(--pf-v6-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="middle"
          x="225"
        >
          Text label
        </tspan>
        <tspan
          dx="0"
          dy="13.6"
          style="fill: var(--pf-v6-chart-bullet--label--subtitle--Fill, #a3a3a3); font-size: 14px; text-anchor: middle; font-family: var(--pf-v6-chart-global--FontFamily, 'Red Hat Text', 'RedHatText', 'Noto Sans Arabic', 'Noto Sans Hebrew', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans Malayalam', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans Thai', Helvetica, Arial, sans-serif); letter-spacing: var(--pf-v6-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="middle"
          x="225"
        >
          Measure details
        </tspan>
      </text>
      <line
        style="fill: var(--pf-v6-chart-bullet--group-title--divider--Fill--Color, #c7c7c7); opacity: 1; stroke: var(--pf-v6-chart-bullet--group-title--divider--stroke--Color, #c7c7c7); stroke-width: 2;"
        vector-effect="non-scaling-stroke"
        x1="0"
        x2="450"
        y1="70"
        y2="70"
      />
    </svg>
    <div
      style="width: 100%; height: 100%; z-index: 99; position: absolute; top: 0px; left: 0px;"
    >
      <svg
        height="300"
        style="width: 100%; height: 100%; overflow: visible;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
